Migrate OpenJdk6Tests to JUnit 5